k8s/security/admission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook
  namespace: artifact-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-webhook
  template:
    metadata:
      labels:
        app: admission-webhook
    spec:
      containers:
        - name: admission-webhook
          image: admission-webhook:dev
          imagePullPolicy: Never

          ports:
            - name: https
              containerPort: 8080

          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true

      volumes:
        - name: tls
          secret:
            secretName: admission-webhook-tls
