k8s/security/admission/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: artifact-platform-admission
webhooks:
  - name: admission.artifact-platform.local
    admissionReviewVersions:
      - v1
    sideEffects: None
    failurePolicy: Fail

    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZoVENDQTIyZ0F3SUJBZ0lVS3Z4TE9NaWlLU2FSVGlCYWplanpoZ2N6ZXZZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VqRW5NQ1VHQTFVRUF3d2VZWEowYVdaaFkzUXRjR3hoZEdadmNtMHRZV1J0YVhOemFXOXVMV05oTVNjdwpKUVlEVlFRS0RCNURiRzkxWkNCT1lYUnBkbVVnUVhKMGFXWmhZM1FnVUd4aGRHWnZjbTB3SGhjTk1qWXdPREUyCk1EYzFOVFE1V2hjTk16WXdPREV6TURjMU5UUTVXakJTTVNjd0pRWURWUVFEREI1aGNuUnBabUZqZEMxd2JHRjAKWm05eWJTMWhaRzFwYzNOcGIyNHRZMkV4SnpBbEJnTlZCQW9NSGtOc2IzVmtJRTVoZEdsMlpTQkJjblJwWm1GagpkQ0JRYkdGMFpt [...]
      service:
        name: admission-webhook
        namespace: artifact-platform
        path: /validate
        port: 443

    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

    namespaceSelector:
      matchLabels:
        artifact-platform-admission: enabled
